# xd2d

./: Cargo.toml  README.md
examples/: simple.rs
src/: app.rs  backend.rs  color.rs  error.rs  lib.rs  mat.rs  math.rs  painter.rs  pos2.rs  rect.rs  rot2.rs  shader.rs  vec2.rs  window_settings.rs  xd.rs
